@@ -1646,7 +1646,6 @@ doi = {10.1007/s00009-023-02550-8},
 }
 
 
-
 @article{Mehmet2025,
 	author = {Ye{\c s}il, Mehmet},
 	journal = {Results in Mathematics},
@@ -1655,4 +1654,14 @@ doi = {10.1007/s00009-023-02550-8},
 	title = {Young Diagram Decompositions for Almost Symmetric Numerical Semigroups},
 	volume = {80},
 	year = {2025}
+}
+
+@misc{kaplan2025,
+      title={On the smallest partition associated to a numerical semigroup}, 
+      author={Nathan Kaplan and Kaylee Kim and Cole McGeorge and Fabian Ramirez and Deepesh Singhal},
+      year={2025},
+      eprint={2507.04169},
+      archivePrefix={arXiv},
+      primaryClass={math.CO},
+      url={https://arxiv.org/abs/2507.04169}, 
 }
