@@ -33,6 +33,7 @@
 - Numerical sets associated to integer partitions
 - Hook lenghts associated to integer partitions of numerical sets and semigroups
 - Dual of a numerical set (and numerical semigroup)
+- Bonded sum of numerical sets
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
 - Added NumericalSemigroupsWithGenusPC
